# kikidoko

./: .firebaserc  .gitignore  AGENT.md  AGENTS.md  README.md  dev-plan.md  firebase.json  firestore.rules  requirements.md  test.html  wrangler.jsonc  研究機器サイト一覧.md
crawler/: README.md  eqnet_categories.csv  eqnet_category_equipment_map.csv  eqnet_category_update_preview.csv  eqnet_large_categories.csv  eqnet_missing_orgs.csv  eqnet_org_prefecture_map.csv  low_count_org_priority.csv  low_count_org_report.csv  low_count_prefecture_report.csv  manual_curation_queue_500.csv  manual_curation_queue_500_next.csv  manual_curation_queue_500_next2.csv  manual_curation_queue_500_next3.csv  manual_usage_backlog.csv  manual_usage_done.csv  manual_usage_overrides.json  papers_abstract_result.csv  papers_no_results_verified_376.csv  papers_pending_audit.csv  papers_recheck_result.csv  papers_strict_apply_result.csv  papers_strict_candidates.csv  papers_strict_manual_review.csv  prefecture_gap_audit.csv  prefecture_gap_fix_preview.csv  pyproject.toml  source_registry_candidate_refresh.csv  source_registry_query_only_backlog.csv  source_registry_sync_now_priority.csv  source_registry_sync_preview.csv  source_registry_sync_preview_q5_target.csv  source_registry_sync_preview_step1_apply.csv  source_registry_sync_preview_sync_now.csv  source_registry_sync_preview_sync_now_after.csv  source_registry_sync_preview_sync_now_q3.csv  source_registry_sync_preview_sync_now_q3_after.csv  usage_from_abstract_done.csv  usage_from_abstract_errors.csv
crawler/config/: papers_doc_query_overrides.csv  papers_strict_keyword_map.json  source_registry_low_count.json
crawler/docs/: biannual_update_runbook.md
crawler/src/kikidoko_crawler/: __init__.py  apply_manual_usage.py  backfill.py  config.py  eqnet_backfill.py  eqnet_category_sync.py  eqnet_org_gap_fill.py  eqnet_prefecture_sync.py  firestore_client.py  geocoder.py  low_count_prefecture_audit.py  main.py  manual_curation_queue.py  models.py  normalizer.py  paper_abstract_sources.py  papers_abstract_backfill.py  papers_audit.py  papers_backfill.py  papers_strict_recheck.py  snapshot_export.py  source_registry_candidate_refresh.py  source_registry_sync.py  usage_from_abstract_backfill.py  utils.py
crawler/src/kikidoko_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crawler/src/kikidoko_crawler/sources/: __init__.py  aist.py  chiba.py  ehime.py  eqnet.py  fukui.py  gifu.py  gunma.py  hamamatsu_med.py  hirosaki_u.py  hiroshima.py  hokudai.py  ibaraki.py  ims.py  iwate.py  jaist.py  kagawa.py  kagoshima.py  kanazawa.py  kek.py  kitami.py  (+47 more)
(+1806 files in other folders)
