[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kikidoko-crawler"
version = "0.1.0"
description = "Crawler for the Kikidoko equipment catalog"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "firebase-admin>=6.5.0",
  "google-cloud-firestore>=2.16.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
]

[project.scripts]
kikidoko-crawl = "kikidoko_crawler.main:main"
kikidoko-backfill = "kikidoko_crawler.backfill:main"
kikidoko-eqnet-backfill = "kikidoko_crawler.eqnet_backfill:main"
kikidoko-eqnet-category-sync = "kikidoko_crawler.eqnet_category_sync:main"
kikidoko-eqnet-prefecture-sync = "kikidoko_crawler.eqnet_prefecture_sync:main"
kikidoko-low-count-audit = "kikidoko_crawler.low_count_prefecture_audit:main"
kikidoko-source-registry-sync = "kikidoko_crawler.source_registry_sync:main"
kikidoko-source-candidate-refresh = "kikidoko_crawler.source_registry_candidate_refresh:main"
kikidoko-export-snapshot = "kikidoko_crawler.snapshot_export:main"
kikidoko-papers-audit = "kikidoko_crawler.papers_audit:main"
kikidoko-papers-backfill = "kikidoko_crawler.papers_backfill:main"
kikidoko-papers-strict-recheck = "kikidoko_crawler.papers_strict_recheck:main"
kikidoko-papers-abstract-backfill = "kikidoko_crawler.papers_abstract_backfill:main"
kikidoko-usage-from-abstract = "kikidoko_crawler.usage_from_abstract_backfill:main"
kikidoko-apply-manual-usage = "kikidoko_crawler.apply_manual_usage:main"
kikidoko-manual-curation-queue = "kikidoko_crawler.manual_curation_queue:main"

[tool.setuptools.packages.find]
where = ["src"]
